--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,18 @@
- <link rel="shortcut icon" type="image/png" href="{{ '/icon.png' | relative_url }}">
- {% seo %}
+<link rel="shortcut icon" type="image/png" href="{{ '/icon.png' | relative_url }}">
+{% seo %}
+
+<script src="https://giscus.app/client.js"
+        data-repo="imahbub/evilapple"
+        data-repo-id="R_kgDOKvVkrw"
+        data-category="General"
+        data-category-id="DIC_kwDOKvVkr84CbEw5"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
