--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="https://evilapple.org" class="btn">Home</a>
-        <a href="{{ site.github.repository_url }}" class="btn">View source</a>
+        <a href="https://evilapple.org" class="btn">🏠 Home</a>
+        <a href="{{ site.github.repository_url }}" class="btn">👀 View source</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
