--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ author }}</h2>
+      <h2 class="project-tagline">{{ page.author }}</h2>
       {% if site.github.is_project_page %}
         <a href="https://evilapple.org" class="btn">🏠 Home</a>
         <a href="{{ site.github.repository_url }}" class="btn">👀 View source</a>
